@@ -64,6 +64,10 @@ EXTRA_DIST = \
 
 CLEANFILES = 
 
+all-local:
+	echo '/* This file is autogenerated, do not edit. */' > include/vips/soname.h; \
+	source libvips.la; echo "#define VIPS_SONAME \"$$dlname\"" >> include/vips/soname.h; 
+
 -include $(INTROSPECTION_MAKEFILE)
 INTROSPECTION_GIRS =
 INTROSPECTION_SCANNER_ARGS = --add-include-path=$(srcdir)
