@@ -37,6 +37,7 @@ pkginclude_HEADERS = \
 	region.h \
 	resample.h \
 	semaphore.h \
+	soname.h \
 	threadpool.h \
 	thread.h \
 	transform.h \
@@ -70,6 +71,7 @@ vips_scan_headers = \
 	${top_srcdir}/libvips/include/vips/morphology.h \
 	${top_srcdir}/libvips/include/vips/draw.h \
 	${top_srcdir}/libvips/include/vips/basic.h \
+	${top_srcdir}/libvips/include/vips/version.h \
 	${top_srcdir}/libvips/include/vips/object.h
 
 enumtypes.h: $(vips_scan_headers) Makefile
