@@ -56,11 +56,6 @@ extern "C" {
  */
 #define VIPS_SIZEOF_HEADER (64)
 
-/* Startup ABI check.
- */
-int vips__init( const char *argv0 );
-size_t vips__get_sizeof_vipsobject( void );
-
 /* What we track for each mmap window. Have a list of these on an openin
  * VipsImage.
  */
@@ -182,6 +177,11 @@ void vips__demand_hint_array( struct _VipsImage *image,
 	int hint, struct _VipsImage **in );
 int vips__image_copy_fields_array( struct _VipsImage *out, 
 	struct _VipsImage *in[] );
+
+/* Deprecated.
+ */
+int vips__init( const char *argv0 );
+size_t vips__get_sizeof_vipsobject( void );
 
 #ifdef __cplusplus
 }
