@@ -1,0 +1,2 @@
+/* This file is autogenerated, do not edit. */
+#define VIPS_SONAME "libvips.so.42"
