@@ -164,14 +164,15 @@ extern "C" {
  * not have _().
  */
 #define VIPS_INIT( ARGV0 ) \
-	(sizeof( VipsObject ) != vips__get_sizeof_vipsobject() ? ( \
+	(vips_version( 3 ) - vips_version( 5 ) != \
+	 	VIPS_LIBRARY_CURRENT - VIPS_LIBRARY_AGE ? ( \
 		vips_info( "vips_init", "ABI mismatch" ), \
 		vips_info( "vips_init", \
-			"library has sizeof(VipsObject) == %zd", \
-			vips__get_sizeof_vipsobject() ), \
+			"library has ABI version %d", \
+			vips_version( 3 ) - vips_version( 5 ) ), \
 		vips_info( "vips_init", \
-			"application has sizeof(VipsObject) == %zd", \
-			sizeof( VipsObject ) ), \
+			"application needs ABI version %d", \
+			VIPS_LIBRARY_CURRENT - VIPS_LIBRARY_AGE ), \
 		vips_error( "vips_init", "ABI mismatch" ), \
 		-1 ) : \
 		vips_init( ARGV0 ))
